crates/solidity/testing/snapshots/bindings_output/contracts/constructor_call_parent/generated/0.4.11-failure.txt
# This file is generated automatically by infrastructure scripts (crates/solidity/outputs/cargo/tests/src/bindings_output/runner.rs). Please don't edit by hand.

Parse errors:
Error: Expected ConstantKeyword or Identifier or InternalKeyword or PrivateKeyword or PublicKeyword.
   ╭─[input.sol:4:16]
   │
 4 │ ╭─▶     constructor() Base() {
 5 │ ├─▶     }
   │ │           
   │ ╰─────────── Error occurred here.
───╯
References and definitions: 
   ╭─[input.sol:1:1]
   │
 1 │ contract Base {}
   │          ──┬─  
   │            ╰─── name: 1
   │ 
 3 │ contract Test is Base {
   │          ──┬─    ──┬─  
   │            ╰─────────── name: 2
   │                    │   
   │                    ╰─── ref: 1
 4 │     constructor() Base() {
   │     ─────┬─────  
   │          ╰─────── unresolved
───╯
Definiens: 
   ╭─[input.sol:1:1]
   │
 1 │ │   contract Base {}
   │ │   ────────┬────────  
   │ │           ╰────────── definiens: 1
 2 │ ╭─▶ 
   ┆ ┆   
 6 │ ├─▶ }
   │ │       
   │ ╰─────── definiens: 2
───╯
